# dobot_coordinate_transformation

./: CMakeLists.txt  package.xml
bash/: red_point_detection.sh  start.sh
cfg/: config.cfg
launch/: test.launch
src/: ar_marker_detection.cpp  calibration.cpp  color_detection.cpp  coordinate_transformer.cpp  test.cpp
srv/: CameraCoordinate.srv
